--- a/laba4/templates/home.html
+++ b/laba4/templates/home.html
@@ -4,12 +4,14 @@
     <a href="{% url 'user:login' %}">Войти</a>
     <br> 
     {% for el in users %}
-    <p> Фамилия: {{ el.surname }}</p>
+    {% if el.role %}
+    <p> Фамилия: {{ el.surename }}</p>
     <p> Имя: {{ el.name }}</p>
     <p> Отчество: {{ el.patronymic }}</p>
     <p> Должность: {{ el.role }}</p>
     <p> Телефон: {{ el.phone }}</p>
     <hr>
+    {% endif %}
     {% endfor %}
     {% else %}
     <a href="{% url 'user:logout' %}">Выйти</a>
@@ -25,7 +27,7 @@
 <hr>
 {% for el in users %}
 
-{% if not el.is_staff and client.username != el.username %}
+{% if not el.is_staff and client.username != el.username and el.role %}
 <p> Фамилия: {{ el.surename }}</p>
 <p> Имя: {{ el.name }}</p>
 <p> Отчество: {{ el.patronymic }}</p>
