--- a/laba4/templates/create_user.html
+++ b/laba4/templates/create_user.html
@@ -1,4 +1,9 @@
+{% extends "main.html" %}
+{% block content %}
+{% load user_filters %}
 <a href="{% url 'user:home' %}">На главную</a>
+<br>
+<hr>
 {% for el in users %}
 {% if not el.is_staff and client.username != el.username %}
 <p> Фамилия: {{ el.surename }}</p>
@@ -9,9 +14,13 @@
 <form method="post" action="{% url 'user:select_role' el.id%}">
     {% csrf_token %}
     <p> Должность: {{ form.role }}</p>
-    <button type="submit">select</button>
+    <button type="submit" class="btn btn-primary">
+        Подтвердить
+    </button>
 </form>
 
 <hr>
 {% endif %}
 {% endfor %}
+
+{% endblock content %}
