--- a/laba4/templates/logged_out.html
+++ b/laba4/templates/logged_out.html
@@ -1,5 +1,25 @@
-<p>
-    Вы вышли из своей учётной записи. Ждём вас снова!
-</p>
+{% extends 'main.html' %}
+{% block content %}
+<div class="row justify-content-center">
+  <div class="col-md-8 p-5">
+    <div class="card">
+      <div class="card-header">
+        Выход
+      </div>
+      <div class="card-body">
+        <p class="offset-md-2">
+          Вы вышли из своей учётной записи. Ждём вас снова!
+        </p>
 
-<a href="{% url 'user:home' %}">Главная</a>
+      <div class="col-md-1 offset-md-5">
+      <a href="{% url 'user:home' %}">
+      <button type="submit" class="btn btn-primary">
+        Главная
+      </button>
+      </a>
+    </div>
+    </div>
+    </div>
+  </div>
+</div>
+{% endblock %} 
