--- a/laba4/templates/login.html
+++ b/laba4/templates/login.html
@@ -1,3 +1,59 @@
+{% extends "main.html" %}
+{% block content %}
+{% load user_filters %}
+  <div class="row justify-content-center">
+    <div class="col-md-5 p-5">
+      <div class="card">
+        <div class="card-header">
+          Войти на сайт
+        </div>
+        <div class="card-body">
+          {% if form.errors %}
+              {% for field in form %}
+                {% for error in field.errors %}            
+                  <div class="alert alert-danger">
+                    {{ error|escape }}
+                  </div>
+                {% endfor %}
+              {% endfor %}
+              {% for error in form.non_field_errors %}
+                <div class="alert alert-danger">
+                  {{ error|escape }}
+                </div>
+              {% endfor %}
+          {% endif %}
+
+          <form method="post"
+            {% if action_url %}
+              action="{% url action_url %}"
+            {% endif %}
+          >
+          {% csrf_token %}
+          <div class="form-group row my-3">
+          {% for field in form %}
+            
+              <label>
+                {{ field.label|safe }}
+                {% if field.field.required %}
+                    <span class="required text-danger">*</span>
+                {% endif %}
+              </label>
+              {{ field|addclass:'form-control' }}
+          {% endfor %}
+          </div>
+          <div class="col-md-6 offset-md-4">
+            <button type="submit" class="btn btn-primary">
+              Войти
+            </button>
+          </div>
+          </form>
+        </div>
+      </div>
+    </div>
+</div>
+{% endblock %} 
+
+
 <h2>Log In</h2>
 <form method="post">
   {% csrf_token %}
