--- a/kursach/templates/includes/header.html
+++ b/kursach/templates/includes/header.html
@@ -14,6 +14,10 @@
 {% else %}
     <a href="{% url 'pc:logout' %}">Выйти</a>
     <br>
-    <a href="{% url 'pc:add_AssemblyOrder' %}">Создать заказ</a>
+    <a href="{% url 'pc:home' %}">На главную</a>
+    <br>
+    <a href="{% url 'pc:user_order' %}">Мои заказы</a>
+    <br>
+    <a href="{% url 'pc:basket' %}">Корзина товаров</a>
     <hr>
 {% endif %}
