--- a/kursach/templates/analise_order.html
+++ b/kursach/templates/analise_order.html
@@ -2,7 +2,24 @@
 {% block content %}
 {% load user_filters %}
 {% include 'includes/header.html' %}
-<table class="lyo">
+<table id="printMe" class="lyo">
+    <style>
+        @media print {
+            #printMe .hidden {
+                display: none;
+            }
+            #printMe {
+                font-size: 14px;
+                border: 1px solid #987;
+                border-collapse: collapse;
+                border-spacing: 0;
+            }
+            #printMe td,
+            #printMe th {
+                border: 1px solid #999;
+            }
+        }
+    </style>
     <tr style="border: 1px solid #000;">
         <td class="lyo" style="border-right: 1px solid black; text-align: center; width: 30%;"><strong>Группа / Комплектующие</strong></td>
         <td class="lyo" style="border-right: 1px solid black; text-align: center; width: 10%;"><strong>Процент</strong></td>
@@ -26,5 +43,6 @@
         {% endfor %}
     {% endfor %}
 </table>
-
+<br>
+<button class="btn btn-primary" id="printTable">Печать таблицы</button>
 {% endblock content %}
