--- a/kursach/templates/user_order.html
+++ b/kursach/templates/user_order.html
@@ -2,6 +2,8 @@
 {% block content %}
 {% include 'includes/header.html' %}
     {% for el in orders %}
+        <p> Заказ: {{ el.name }} </p>
+        <p> Время заказа: {{ el.pub_date }} </p>
         <p> Комплектующие: </p>
 
         {% for accessories in el.assembly_order_accessories.all %}
