--- a/kursach/templates/includes/header.html
+++ b/kursach/templates/includes/header.html
@@ -14,7 +14,7 @@
         <br>
         <a href="{% url 'pc:home' %}">На главную</a>
         <br>
-        <a href="{% url 'pc:collector_orders' %}">Текушие заказы</a>
+        <a href="{% url 'pc:collector_orders' %}">Текущие заказы</a>
         <br>
         <a href="{% url 'pc:history_orders' %}">История заказов</a>
         <hr>
