--- a/kursach/templates/user_order.html
+++ b/kursach/templates/user_order.html
@@ -11,9 +11,9 @@
         {% endfor %}
         <p> Стоимость: {{ el.total_price }}р.</p>
         {% if el.confirmation %}
-            <p> Статус: подтвержден </p>
+            <p> Статус: принят </p>
         {% else %}
-            <p> Статус: ожидает подтверждения </p>
+            <p> Статус: ожидание </p>
         {% endif %}
         {% if el.assembled %}
             <p> Статус сборки: собран </p>
